BUG-DFC-13686-FaC-Location-Mobile-view-drop-down-overlaps-everything-underneath
Moved styles from  includes folder to patterns> filters

--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_filters.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_filters.scss
@@ -75,10 +75,4 @@
     .conditional-box {
         max-height: none;
     }
-
-    @media (max-width: 40.0625em) {
-      #location-input.govuk-input--width-10 {
-          max-width: none;
-      }
-    }
 }
