--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/patterns/filters.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/patterns/filters.scss
@@ -76,6 +76,13 @@
     .conditional-box {
         max-height: none;
     }
+
+    @media (max-width: 40.0625em) {
+      #location-input.govuk-input--width-10 {
+          max-width: none;
+      }
+    }
+
 }
 
 .filters-button {
